force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Actual_IRR__c.field-meta.xml
<CustomField>
    <fullName>Actual_IRR__c</fullName>
    <description>The rate of interest that is actually paid to the limited partners.</description>
    <label>Actual IRR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>