force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Actual_Return_Amount__c.field-meta.xml
<CustomField>
    <fullName>Actual_Return_Amount__c</fullName>
    <description>The actual amount received by the Limited Partners.</description>
    <label>Actual Return Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>