force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Amount_funded__c.field-meta.xml
<CustomField>
    <fullName>Amount_funded__c</fullName>
    <description>Total amount that has been invested or committed to portfolio companies by the VC fund.</description>
    <label>Amount funded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>