force-app/main/default/objects/FinServ__FinancialAccount__c/fields/ARR__c.field-meta.xml
<CustomField>
    <fullName>ARR__c</fullName>
    <description>Annual Return Rate</description>
    <label>ARR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>