force-app/main/default/objects/FinServ__FinancialAccount__c/fields/AUM__c.field-meta.xml
<CustomField>
    <fullName>AUM__c</fullName>
    <description>Assets Under Management.
AUM represents the total market value of the assets that a fund manages on behalf of its investors.</description>
    <label>AUM(Fund Size)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>