force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Carry_Fee__c.field-meta.xml
<CustomField>
    <fullName>Carry_Fee__c</fullName>
    <description>The carry fee is a share of the profits earned by the fund after successfully exiting an investment.</description>
    <label>Carry Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>