force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Carry_Fee_Percent__c.field-meta.xml
<CustomField>
    <fullName>Carry_Fee_Percent__c</fullName>
    <description>Percentage of the profits  earned by the fund after successfully exiting an investment.</description>
    <label>Carry fee %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>