force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Committed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Committed_Amount__c</fullName>
    <description>The total amount that have been pledged or promised by Limited Partners.</description>
    <label>Committed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>