force-app/main/default/objects/FinServ__FinancialAccount__c/fields/EBIDTA__c.field-meta.xml
<CustomField>
    <fullName>EBIDTA__c</fullName>
    <description>Earnings Before Interest, Taxes, Depreciation, and Amortization.</description>
    <label>EBIDTA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>