force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Exit_amount__c.field-meta.xml
<CustomField>
    <fullName>Exit_amount__c</fullName>
    <description>total amount of money generated when the fund successfully exits an investment in a  company.</description>
    <label>Exit amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>