force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Exit_reason__c.field-meta.xml
<CustomField>
    <fullName>Exit_reason__c</fullName>
    <description>Reason or circumstances behind the exit of an investment in a  company.</description>
    <label>Exit reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>initial public offering (IPO)</fullName>
            </value>
            <value>
                <fullName>merger and acquisition (M&amp;A)</fullName>
            </value>
            <value>
                <fullName>secondary sale</fullName>
            </value>
            <value>
                <fullName>Merger</fullName>
            </value>
            <value>
                <fullName>Strategic Decision</fullName>
            </value>
            <value>
                <fullName>Financial Performance</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>