force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Expected_IRR__c.field-meta.xml
<CustomField>
    <fullName>Expected_IRR__c</fullName>
    <description>The rate of interest that is expected to be received by Limited Partners</description>
    <label>Expected IRR</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>