force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Expected_Return_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expected_Return_Amount__c</fullName>
    <description>The amount that is expected to be received by Limited Partners.</description>
    <label>Expected Return Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>