force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Extended__c.field-meta.xml
<CustomField>
    <fullName>Extended__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field tells about that the term is extended or not?</description>
    <label>Extended</label>
    <type>Checkbox</type>
</CustomField>