force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Extended_Term__c.field-meta.xml
<CustomField>
    <fullName>Extended_Term__c</fullName>
    <description>This field indicates the new duration or period of the investment.</description>
    <label>Extended Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>