force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Funds_invested__c.field-meta.xml
<CustomField>
    <fullName>Funds_invested__c</fullName>
    <description>Total amount which is invested.</description>
    <label>Funds invested</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>