force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Funds_received__c.field-meta.xml
<CustomField>
    <fullName>Funds_received__c</fullName>
    <label>Funds received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>