force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Gain__c.field-meta.xml
<CustomField>
    <fullName>Gain__c</fullName>
    <description>Profit earned on investments.</description>
    <label>Gain</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>