force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Gain_percent__c.field-meta.xml
<CustomField>
    <fullName>Gain_percent__c</fullName>
    <description>percentage of profits or returns earned on investments within the fund.</description>
    <label>Gain %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>