force-app/main/default/objects/FinServ__FinancialAccount__c/fields/IRR_fund__c.field-meta.xml
<CustomField>
    <fullName>IRR_fund__c</fullName>
    <description>Interest Rate for Fund</description>
    <label>IRR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>