force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Management_fee__c.field-meta.xml
<CustomField>
    <fullName>Management_fee__c</fullName>
    <description>fee charged by the fund manager for managing the fund&apos;s investments.</description>
    <label>Management fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>