force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Management_fee_percentage__c.field-meta.xml
<CustomField>
    <fullName>Management_fee_percentage__c</fullName>
    <defaultValue>0.02</defaultValue>
    <description>Percentage charged for managing the fund.</description>
    <label>Management fee %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>