force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Stake_received__c.field-meta.xml
<CustomField>
    <fullName>Stake_received__c</fullName>
    <description>percentage ownership or equity stake that the VC fund acquires in a portfolio company as a result of its investment.</description>
    <label>% Stake received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>