force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <defaultValue>10</defaultValue>
    <description>The term field describes the duration or period of Investment.</description>
    <label>Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>