force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Unallocated_funds__c.field-meta.xml
<CustomField>
    <fullName>Unallocated_funds__c</fullName>
    <description>The amount(fund) which is not invested.</description>
    <label>Unallocated funds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>