force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Valuation_of_company_at_time_of_deal__c.field-meta.xml
<CustomField>
    <fullName>Valuation_of_company_at_time_of_deal__c</fullName>
    <description>Valuation of company at time of deal</description>
    <label>Valuation of company at time of deal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>