force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/Commitment.recordType-meta.xml
<RecordType>
    <fullName>Commitment</fullName>
    <active>true</active>
    <label>Commitment</label>
</RecordType>