force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/Deal.recordType-meta.xml
<RecordType>
    <fullName>Deal</fullName>
    <active>true</active>
    <description>New Financial Account record type for managing deal</description>
    <label>Deal</label>
</RecordType>