force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/Fund.recordType-meta.xml
<RecordType>
    <fullName>Fund</fullName>
    <active>true</active>
    <label>Fund</label>
</RecordType>